<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/cv_result"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="8dp"
    android:clickable="true"
    android:focusable="true"
    app:cardCornerRadius="20dp"
    app:cardElevation="5dp"
    app:cardMaxElevation="5dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="8dp">

        <com.google.android.material.imageview.ShapeableImageView
            android:id="@+id/shapeableImageView"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_marginStart="16dp"
            android:src="@drawable/member"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/txt_pemasukan"
            style="@style/text_12sp_roboto"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:text="@string/txt_dana_masuk"
            app:layout_constraintStart_toEndOf="@+id/shapeableImageView"
            app:layout_constraintTop_toTopOf="@+id/shapeableImageView" />

        <TextView
            android:id="@+id/tv_date"
            style="@style/text_12sp_roboto"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/txt_dummy_date"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="@+id/txt_pemasukan"
            app:layout_constraintTop_toBottomOf="@+id/txt_pemasukan" />

        <com.google.android.material.imageview.ShapeableImageView
            android:id="@+id/iv_star"
            android:layout_width="16dp"
            android:layout_height="16dp"
            android:layout_marginEnd="8dp"
            android:src="@drawable/star"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/txt_rp"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/txt_rp"
            style="@style/text_12sp_roboto"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="4dp"
            android:text="@string/txt_rp"
            app:layout_constraintBottom_toBottomOf="@+id/iv_star"
            app:layout_constraintEnd_toStartOf="@+id/tv_uang"
            app:layout_constraintTop_toTopOf="@+id/iv_star" />

        <TextView
            android:id="@+id/tv_uang"
            style="@style/text_12sp_roboto"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="24dp"
            android:text="@string/txt_dummy_total_tab"
            app:layout_constraintBottom_toBottomOf="@+id/txt_rp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@+id/txt_rp" />

        <com.google.android.material.imageview.ShapeableImageView
            android:id="@+id/iv_dot"
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:src="@drawable/ic_dot"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.cardview.widget.CardView>