<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@drawable/bg_gradient_tbg2"
    tools:context=".view.EditFragment">


    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/materialTextView"
        style="@style/text_20sp_roboto"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:padding="8dp"
        android:text="@string/txt_edit_catatan"
        android:textColor="@color/green_500"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.imageview.ShapeableImageView
        android:id="@+id/iv_back"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:background="@drawable/ic_back"
        app:layout_constraintBottom_toBottomOf="@+id/materialTextView"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/materialTextView" />

    <com.google.android.material.imageview.ShapeableImageView
        android:id="@+id/appCompatImageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="36dp"
        android:background="@drawable/money4"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/materialTextView" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/container_uang"
        style="@style/BoxTheming"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginTop="32dp"
        android:elevation="16dp"
        android:hint="@string/txt_nominal"
        app:boxStrokeColor="@color/black_700"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/appCompatImageView">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/uang_input"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@null"
            android:backgroundTint="@color/grey"
            android:inputType="number"
            android:requiresFadingEdge="horizontal"
            android:singleLine="true" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/container_date"
        style="@style/BoxTheming"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginTop="8dp"
        android:elevation="16dp"
        android:hint="@string/tv_date"
        app:boxStrokeColor="@color/black_700"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/container_uang">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/date_input"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@null"
            android:backgroundTint="@color/grey"
            android:inputType="text"
            android:requiresFadingEdge="horizontal"
            android:singleLine="true" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/container_desc"
        style="@style/BoxTheming"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginTop="8dp"
        android:elevation="16dp"
        android:hint="@string/txt_keterangan"
        app:boxStrokeColor="@color/black_700"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/container_date">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/desc_input"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@null"
            android:backgroundTint="@color/grey"
            android:inputType="text"
            android:maxLines="3"
            android:scrollHorizontally="true"
            android:requiresFadingEdge="horizontal"/>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_edit"
        style="@style/Widget.MaterialComponents.Button"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:elevation="20dp"
        android:padding="0dp"
        android:stateListAnimator="@null"
        android:text="@string/txt_edit_catatan"
        app:backgroundTint="@color/green_500"
        app:iconGravity="textStart"
        app:iconSize="32dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/container_desc" />


    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_delete"
        style="@style/Widget.MaterialComponents.Button"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:elevation="20dp"
        android:padding="0dp"
        android:stateListAnimator="@null"
        android:text="@string/txt_hapus_catatan"
        app:backgroundTint="#EB7575"
        app:iconGravity="textStart"
        app:iconSize="32dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_edit" />
</androidx.constraintlayout.widget.ConstraintLayout>